fixed the home page flickering issue

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   background-color: #f2f2f2;
   font-family: Arial, Helvetica, sans-serif;
+  width: calc(100vw - 50px);
 }
 .head {
   width: 90%;
